2013-08-26  Jan Hubicka  <jh@suse.cz>

	* ipa-prop.c (ipa_print_node_params): Do not ICE during WPA.

2013-08-26  Jan Hubicka  <jh@suse.cz>

	* ipa-inline-transform.c (inline_transform): Be ready for basic block
	to be changed by edge redirection.

2013-08-26  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (cgraph_speculative_call_info): Fix parameter order and formating;
	add sanity check.
	(cgraph_resolve_speculation): Add FIXME about scaling profiles.
	(cgraph_redirect_edge_call_stmt_to_callee): Fix ICE in debug dump.
	* ipa-inline.c (heap_edge_removal_hook): Reset node growth cache.
	(resolve_noninline_speculation): Update callee keys, too.

2013-08-26  Jan Hubicka  <jh@suse.cz>

	* tree.h (tree_decl_with_vis): Add cxx_constructor, cxx_destructor.
	(DECL_CXX_CONSTRUCTOR_P, DECL_CXX_DESTRUCTOR_P): New macros.

2013-08-26  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/i386/i386.c (x86_64_elf_select_section): Put ATTRIBUTE_UNUSED
	into proper place.

2013-08-26  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_debug_options): Remove prototype.
	(x86_64_elf_select_section): Ditto.
	(ix86_handle_tm_regparm_attribute): Remove ATTRIBUTE_UNUSED on used
	arguments.
	(ix86_pass_by_reference): Ditto.
	(output_set_got): Ditto.
	(ix86_unary_operator_ok): Ditto.
	(ix86_expand_builtin): Ditto.

2013-08-23  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (cgraph_turn_edge_to_speculative): Fix debug output.

2013-08-23  Jan Hubicka  <jh@suse.cz>

	* tree.h (TYPE_FINAL_P, DECL_FINAL_P): New macros.
	(tree_decl_with_vis): Add FINAL field.

2013-08-23  Jeff Law  <law@redhat.com>

	* tree-ssa-pre.c (do_regular_insertion): Include the expression in
	the debugging dump when the expression is fully redundant.

2013-08-23  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* diagnostic.c (diagnostic_set_caret_max_width): Use pp_buffer.
	* gimple-pretty-print.c (gimple_dump_bb_buff): Likewise.
	* pretty-print.c (pp_formatted_text_data): Likewise.